--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "nodemon": "^1.17.1"
+    "nodemon": "^1.17.1",
+    "mysql": "^2.15.0"
   }
 }
