--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "nodemon": "^1.17.1",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "ejs": "^2.5.7"
   }
 }
